cancelar pedido validar reserva al tomar mesa

--- a/src/pages/pages-pedidos-pendientes-mozo/pages-pedidos-pendientes-mozo.html
+++ b/src/pages/pages-pedidos-pendientes-mozo/pages-pedidos-pendientes-mozo.html
@@ -36,6 +36,7 @@
             </ion-card>
           </ion-list>
           <button ion-button full style="background-color: steelblue" (click)="AceptarPedido(pedido)">Aceptar</button>
+          <button ion-button full style="background-color: rgb(180, 70, 70)" (click)="CancelarPedido(pedido)">Cancelar</button>
       </ion-card-content>
      
     </ion-card>
