--- a/src/pages/pages-reserva/pages-reserva.html
+++ b/src/pages/pages-reserva/pages-reserva.html
@@ -7,11 +7,11 @@
   <form [formGroup]="registroForm" (submit)="Registrar()">
       <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
           <ion-label>Fecha</ion-label>
-          <ion-datetime displayFormat="MMM DD YYYY" name="fecha" [formControl]="fecha" required></ion-datetime>
+          <ion-datetime displayFormat="MMM DD YYYY"  [min]="hoy" name="fecha" [formControl]="fecha" required></ion-datetime>
       </ion-item>
       <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
           <ion-label>Hora</ion-label>
-          <ion-datetime displayFormat="h:mm A" pickerFormat="h mm A" name="hora" [formControl]="hora" required></ion-datetime>
+          <ion-datetime  displayFormat="h:mm A" pickerFormat="h mm A" name="hora" [formControl]="hora" required></ion-datetime>
       </ion-item>
       <ion-item padding style="background-color: rgba(0,0,0,0.7) !important; color: white; border-radius: 10px;">
           <ion-label>Cantidad de comensales</ion-label>
