Se sube alta y baja de productos en formato JSON/Excel funcionando

--- a/src/pages/pages-producto/pages-producto-carga-masiva/pages-producto-carga-masiva.html
+++ b/src/pages/pages-producto/pages-producto-carga-masiva/pages-producto-carga-masiva.html
@@ -7,10 +7,10 @@
 <ion-content padding class="bartenderMenu">
   <div padding style="background-color: rgba(0,0,0,0.5); border-radius: 20px;">
     <ion-segment [(ngModel)]="type">
-      <ion-segment-button value="json" style="font-size: 25px;">
+      <ion-segment-button value="json" style="font-size: 25px; color: white;">
         JSON
       </ion-segment-button>
-      <ion-segment-button value="excel" style="font-size: 25px;">
+      <ion-segment-button value="excel" style="font-size: 25px; color: white;">
         excel
       </ion-segment-button>
     </ion-segment>
